--- a/PikaRun/PikaRun.vcxproj
+++ b/PikaRun/PikaRun.vcxproj
@@ -63,6 +63,11 @@
     <ClCompile Include="iMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="draw.h" />
+    <ClInclude Include="functions.h" />
+    <ClInclude Include="keyboard.h" />
+    <ClInclude Include="score.h" />
+    <ClInclude Include="timer.h" />
     <ClInclude Include="variables.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
